Jun 06, 2013 - v0.1.6  Exif classes made private.  Refactored IFD post
    processing.  Corrected omission of Exif in UUIDBox docstring.

Jun 06, 2013 - v0.1.5  Changed ColourSpecificationBox attribute "color_space"
    to "colorspace".  Fixed MANIFEST issue affecting PyPI installs.

Jun 05, 2013 - v0.1.4  Added Exif UUID read support.

Jun 02, 2013 - v0.1.3p1  Raising IOErrors when code block size and precinct
    sizes are not in harmony.  Added statement to docs about upstream library
    dependence.  Added roadmap to docs.

May 30, 2013 - v0.1.2.  Added XMP UUID read support.  Added jp2 boxes to rst
    docs, XMLBox.indent method made into a private module method.  Precinct
    sizes restricted to be multiples of two.

May 27, 2013 - v0.1.1.  Changed write example to not rely on matplotlib.  Fixed
    readthedocs.org setup to build documentation automatically.  Can import 
    glymur without libopenjp2 actually being present.  Changed write example
    to not rely on matplotlib.